<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPadrao"
    tools:context=".realizasorteio.RealizaSorteioFragment">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_pedras_sorteadas"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pedras_pager_height">

        <android.support.design.widget.TabLayout
            android:id="@+id/tl_pedras_sorteadas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pedras_tab_height"
            android:background="@color/colorPrimaryDark"
            style="@style/TabLetras" />

    </android.support.v4.view.ViewPager>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_sortear_pedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PedraGrandeCard"
        app:layout_constraintTop_toBottomOf="@+id/vp_pedras_sorteadas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/bt_sortear_pedra"
            android:layout_width="@dimen/pedra_grande_lado"
            android:layout_height="@dimen/pedra_grande_lado"
            style="@style/PedraGrande"
            android:text="@string/bt_sortear_pedra" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
